[package]
name = "telluride"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Michael Ilyin <milyin@gmail.com>"]
repository = "https://github.com/milyin/telluride"
documentation = "https://docs.rs/telluride"
readme = "README.md"
keywords = ["telegram", "teloxide", "markdown", "bot", "telegram-bot"]
categories = ["development-tools"]
description = "The extension for teloxide library providing extended and compile-time safe API"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
tokio = { version =  "1.8", features = ["fs", "sync", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"

